# Remote-Pilot

./: CMakeLists.txt  README.md  main.cpp
common/: CMakeLists.txt  agent_core.cpp  agent_core.h  cpu_collector.cpp  cpu_collector.h  memory_collector.cpp  memory_collector.h
common/interfaces/: cpu_reader.h  memory_reader.h
linux/: CMakeLists.txt  linux_cpu_reader.cpp  linux_cpu_reader.h  linux_memory_reader.cpp  linux_memory_reader.h
mac/: CMakeLists.txt
windows/: CMakeLists.txt  windows_cpu_reader.cpp  windows_cpu_reader.h  windows_memory_reader.cpp  windows_memory_reader.h
